# astrodynamics-lib

./: .gitignore  CMakeLists.txt
modules/core/: CMakeLists.txt  constants.hpp  epoch.hpp  math.hpp  state.hpp
modules/frames/: CMakeLists.txt  frame_conversions.cpp  frame_conversions.hpp
modules/orbital/: CMakeLists.txt  conversions.hpp  kepl_cart_vallado.hpp
modules/orbital/conversions/: kepl_cart.hpp
tests/: CMakeLists.txt  tst_frame_conversions.cpp  tst_kepl_cart.cpp
